<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Projet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">LP-DAM</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Projet Andoid MNM-DAMDAM</string>
    <string name="action_settings">Settings</string>
    <string name="cours_1_title">ABC d’Android</string>
    <string name="cours_1_hisoire_title">Histoire de Kotlin</string>
    <string name="cours_2_title">Utiliser la bibliothèque Anko</string>
    <string name="cours_2_importer_title">Importer la bibliothèque Anko Commons</string>
    <string name="cours_2_importer_text">
        1. Placez vous dans le fichier gradle du projet build.gradle (Project: MyProject)\n
        2. Ajoutez une variable contenant la version d’Anko Commons à utiliser:\n
        \t &#8226; ext.anko_version = \'0.10.5\'\n
        3. Placez vous dans le fichier gradle du module build.gradle (Module: app)\n
        4.Ajoutez la dépendance Anko Commons dans le bloc approprié dependencies :\n
        \t &#8226; dependencies {\n
        \t\t implementation "org.jetbrains.anko:anko-common:$anko_version"\n
        \t }\n
    </string>
    <string name="cours_2_afficher_title">Afficher un message rapide</string>
    <string name="cours_2_afficher_text">
        Afin de présenter des messages d’information rapide à l’utilisateur, le SDK Android fournit la classe Toast (cf.
        documentation officiel). Elle permet de créer un message avec makeText(), cette dernière prend 3 paramètres :\n
        \t &#8226; le contexte de l’application (this depuis une Activity, activity depuis un Fragment)\n
        \t &#8226; le message\n
        \t &#8226; la durée d’affichage long ou court\n
        Enfin, il s’agit d’afficher le message ainsi créé via la fonction show() (l’appel indispensable à ne pas oublier
        lorsqu’on code à la plage ;).\n
        La bibliothèque Anko Commons simplifie cette tâche grâce à la fonction toast(), dont l’import correspond à
        import org.jetbrains.anko.toast.
        Elle peut être appelée de manière indifférente depuis une Activity ou un Fragment, avec un seul paramètre (le
        texte à afficher).\n
        Appelez la fonction toast() :
        \t &#8226; toast(R.string.text_island)
    </string>
    <string name="cours_2_dialogue_title">Ouvrir une boite de dialogue</string>
    <string name="cours_2_dialogue_text">
        Appelez la fonction alert(), dont l’import correspond à import org.jetbrains.anko.alert, cela dans son plus
        simple appareil :\n
        \t &#8226; alert("YO").show()
    </string>
    <string name="cours_2_email_title">Proposer d’envoyer un email</string>
    <string name="cours_2_email_text">
        Afin de proposer d’envoyer un email, à l’utilisateur, avec une application native, le SDK Android fournit la
        classe Intent avec un paramétrage spécifique.\n
        La bibliothèque Anko Commons propose la fonction email(), dont l’import correspond à import
        org.jetbrains.anko.email.\n
        Appelez la fonction email() :\n
        \t &#8226; email("hello@chillcoding.com", getString(R.string.subject_feedback), "")
    </string>
    <string name="cours_2_exp_title">Retour d’expérience</string>
    <string name="cours_2_exp_text">
        Finalement, la bibliothèque Anko Commons offre des fonctions d’extensions et autres implémentations Kotlin
        intéressantes. En particulier, elle permet de programmer très rapidement les tâches utilisateurs les plus
        courantes :\n
        \t &#8226; Voir un message rapide\n
        \t &#8226; Interagir avec une boîte de dialogue\n
        \t &#8226; Ouvrir un autre écran\n
        \t &#8226; Voir une page Internet\n
        \t &#8226; Envoyer un email\n
        \t &#8226; Partager du contenu\n
        Cela dit, il est important de savoir ce qu’il y a sous le capot (Cmd ou Ctrl + clique :) afin de connaître
        l’implémentation effectuée à partir du SDK Android. Parfois, il est nécessaire de mettre les mains dans le
        cambouis afin de développer une fonctionnalité plus évoluée, voir plus complexe. La connaissance du SDK Android
        est alors bienvenue.\n
        Aussi, l’utilisation des fonctions Anko Commons peuvent être restreintes à un contexte spécifique, c’est-à-dire
        qu’elles peuvent être appelées depuis une Activity ou bien depuis un Fragment. Leur intégration dans une
        architecture spécifiquement alambiqué n’est alors pas forcément adéquate.\n
    </string>
    <string name="cours_5_title">Les vues avancées</string>
    <string name="cours_5_web_title">WebView</string>
    <string name="cours_5_web_text" tools:ignore="StringEscaping">
        &#8226; Vue d\'affichage de contenu HTML avec la bibliothèque de rendu WebKit\n
        &#8226;Permet d\'embarquer un véritable navigateur web dans une application ; bridage possible depuis
        WebView.getSettings() :\n
        \t &#8226;setJavaScriptEnabled(false) pour désactiver JavaScript\n
        \t &#8226;setPluginState(PluginState.OFF) pour désactiver les plugins\n
        \t &#8226;setAllowContentAccess(false) pour désactiver le chargement d\'URL\n
        \t &#8226;setAllowFileAccess(false) pour désactiver le chargement de fichiers locaux\n
        &#8226; Utilisation :\n
        \t &#8226;loadData(String data, String mimeType, String encoding) : affiche un contenu directement spécifié\n
        \t &#8226;loadUrl(String url) : charge le contenu à l\'URL spécifiée\n
        &#8226;Utile pour créer une application Android/HTML5/JavaScript hybride : communication d\'un objet Java à un
        script JavaScript avec addJavaScriptInterface(Object object, String name)\n
        &#8226;Interception des clics sur liens hypertextes en créant une classe dérivée redéfinissant
        shouldOverrideUrlLoading()\n
    </string>
    <string name="cours_5_widget_title">Widgets composés à usage spécifique</string>
    <string name="cours_5_widget_text" tools:ignore="StringEscaping">
        Pour formulaire : facilite l\'entrée de données communes dans des formulaires et permet la validation\n
        &#8226;TimePicker, DatePicker : choix d\'horaire et de date\n
        &#8226;CalendarView: affiche un calendrier avec date sélectionnable\n
        &#8226;NumberPicker : sélection d\'un entier dans un intervalle avec incrémentation et décrémentation\n
        &#8226;DialerFilter : permet de saisir des chiffres/lettres avec un clavier numérique de téléphone\n
        &#8226;Pour activité multimédia :\n
        \t&#8226;MediaController : offre des boutons de contrôle pour une vidéo (avec VideoView par exemple)\n
        \t&#8226;ZoomControls : bouton de zoom/dezoom\n
    </string>
    <string name="cours_5_widget2_title">Widgets inter-applicatifs</string>
    <string name="cours_5_widget2_text" tools:ignore="StringEscaping">
        Widget : composant graphique d\'une application embarquable dans une autre application\n
        &#8226;À ne pas confondre avec les widgets précédents !\n
        &#8226;Utilisation typique par intégration sur l\'écran d\'accueil\n
        &#8226;Principaux types de widgets :\n
        \t&#8226; Widgets d\'information affichant certaines données de l\'application (par exemple prévisions météo,
        trafic routier&#8230;)\n
        \t&#8226;Widgets de contrôle permettant d\'agir sur l\'application sans ouvrir de nouvelle activité (lancer des
        actions, changer un état&#8230;)\n
        \t&#8226; Widget de parcours de collections permettant d\'itérer sur des éléments (visualisation de gallerie
        photo par exemple)\n
    </string>
    <string name="cours_6_title">Les vues basées sur des adaptateurs</string>
    <string name="cours_6_principe_title">Principe</string>
    <string name="cours_6_principe_text" tools:ignore="StringEscaping">
        Classes dérivées de AdapterView\n
        &#8226;Adapter est un modèle permettant d\'obtenir les vues enfants à afficher\n
        \t&#8226;getView(int i, View convertView, ViewGroup parent) permet d\'obtenir la vue à afficher pour l\'enfant
        #i (implantations par défaut utilisant un TextView)\n
        &#8226;Adapteurs pré-définis :\n
        \t&#8226;ArrayAdapter : stockage d\'une liste d\'éléments\n
        \t&#8226;SimpleCursorAdapter : modèle adaptant les données d\'un Cursor de BDD\n
    </string>
    <string name="cours_6_view_title">ListView et GridView (AbsListView)</string>
    <string name="cours_6_view_text" tools:ignore="StringEscaping">
        &#8226;ListView : affichage d\'une liste avec défilement vertical puisant ses éléments dans un ListAdapter
        (classe dérivée avec liste à deux niveaux : ExpandableListView)\n
        &#8226;GridView : affichage sur une grille avec défilement vertical\n
        &#8226;Attributs intéressants : columnWidth, gravity (alignement de l\'enfant dans la cellule), numColumns,
        stretchMode\n
        &#8226;Possibilité d\'agir sur les évènements de défilement : setOnScrollListener(ScrollListener l)\n
    </string>
    <string name="cours_6_grid_title">GridView des versions d\'Android</string>
    <string name="cours_6_grid_text" tools:ignore="StringEscaping">
        &#8226;Objectif : afficher en grille les différentes versions d\'Android\n
        &#8226;Récupération des versions d\'Android par introspection sur Build.VERSION_CODES (consultation des champs
        statiques)\n
        &#8226;Affichage de chaque version en utilisant un layout personnalisé :\n
        \t&#8226;Création du layout dans un fichier XML (LinearLayout avec deux TextView)\n
        \t&#8226;Chargement du layout XML avec le LayoutInflater en redéfinissant la méthode getView() de l\'adapter
        placé sur la GridView\n
        \t&#8226;Appels de setText pour définir le nom de la version et le numéro d\'API\n
        \t&#8226;Choix d\'une couleur aléatoire pour le fond du LinearLayout (lorsque la cellule est rafraîchie la
        couleur peut changer !)\n
    </string>
    <string name="cours_6_spinner_title">Spinner</string>
    <string name="cours_6_spinner_text" tools:ignore="StringEscaping">
        &#8226; Champ de texte avec menu déroulant pour choix d\'un item unique\n
        &#8226; Éléments de choix fournis par un SpinnerAdapter (interface implantée par ArrayAdapter)\n
        &#8226; Réaction à l\'élément choisi avec un onItemSelectedListener\n
    </string>
    <string name="cours_6_viewpager_title">ViewPager</string>
    <string name="cours_6_viewpager_text" tools:ignore="StringEscaping">
        &#8226; Maintient une liste de vues parcourable par un geste de swipe\n
        &#8226; Les vues à afficher sont fournies par un PagerAdapter (ViewPager.setAdapter()) qui est responsable de
        l\'ajout et de la suppression d\'éléments dans le ViewPager :\n
        \t&#8226;Object instantiateItem(ViewGroup parent, int position) : méthode appelée lorsque la vue doit être
        installée dans le ViewGroup parent (doit faire l\'installation) ; retourne un objet qui est une clé représentant
        l\'item\n
        \t&#8226;void destroyItem(ViewGroup parent, int pos, Object o) : méthode appelée pour la destruction d\'un item
        (désinstalle du ViewGroup)\n
        \t&#8226; int getCount() : retourne le nombre d\'items dans l\'adapter\n
        \t&#8226; boolean isViewFromObject(View view, Object o) : permet d\'indiquer si la vue et l\'objet passés en
        paramètre sont liés (l\'objet représentant une clé pour la vue)\n
        &#8226;Version spécifique de PagerAdapter utilisant des fragments : FragmentPagerAdapter\n
        \t&#8226;Fragment getItem(int pos) : méthode abstraite à redéfinir\n
    </string>
</resources>