<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".cours.Cours_2">

    <ScrollView android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#ffffff">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:paddingLeft="10dp"
                      android:paddingRight="10dp">
            <!-- TODO: Update blank fragment layout -->
            <TextView
                    android:id="@+id/cours_2_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/cours_2_title"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>
            <TextView
                    android:id="@+id/importer_title"
                    android:textStyle="bold"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/cours_2_importer_title"/>

            <TextView
                    android:id="@+id/importer_text"
                    android:text="@string/cours_2_importer_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            />
            <TextView
                    android:id="@+id/afficher_title"
                    android:textStyle="bold"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/cours_2_afficher_title"/>
            <TextView
                    android:id="@+id/afficher_text"
                    android:text="@string/cours_2_afficher_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            />
            <TextView
                    android:id="@+id/dialoge_title"
                    android:textStyle="bold"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/cours_2_dialogue_title"/>
            <TextView
                    android:id="@+id/dialoge_text"
                    android:text="@string/cours_2_dialogue_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            />
            <TextView
                    android:id="@+id/email_title"
                    android:textStyle="bold"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/cours_2_email_title"/>
            <TextView
                    android:id="@+id/emaile_text"
                    android:text="@string/cours_2_email_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            />
            <TextView
                    android:id="@+id/exp_title"
                    android:textStyle="bold"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/cours_2_exp_title"/>
            <TextView
                    android:id="@+id/exp_text"
                    android:text="@string/cours_2_exp_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            />

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/arrow_up_float"/>
</FrameLayout>